# Comp_CompilerAndIntCode

./: README.md
IntCodeProject/: IntcodeSpec.txt  ProjectProposal.docx  llvmUniqueComands.txt
IntCodeProject/PersonalProject/: Demo.ll  code.ll
IntCodeProject/PersonalProject/src/: Main.java
IntCodeProject/PersonalProject/src/Compiler/: IntCodeCompiler.java
IntCodeProject/PersonalProject/src/Compiler/CodeGen/: BlockLocation.java  GlobalLocation.java  ICode.java  Instruction.java  RelativeToCurLocation.java
IntCodeProject/PersonalProject/src/Compiler/Symbols/: ScopeManager.java  SymbolGen.java  (+1 more)
IntCodeProject/Test/: IC  code.txt  codeBU.ll  testCode.IC
IntCodeProject/Test/src/IntCodeMachine/: IntCodeMachine.java
wpl-ErichSchwarzrock/: CMakeLists.txt  Demo.wpl  Fibonacci.IC  Fibonacci.ll  Fibonacci.wpl  README.md  Test.txt  Test2.ll  Test2.txt  Test3.ll  Test3.txt  WPL_Runtime.c  WPL_Runtime.h  demo.IC  demo.ll  foo  foo.c  foo.ll  test  test.ll  test2
wpl-ErichSchwarzrock/ErichShit/: WPLBaseListener.cpp  WPLBaseListener.h
wpl-ErichSchwarzrock/examples/: CMakeLists.txt
wpl-ErichSchwarzrock/examples/rpnprinter/: CMakeLists.txt  RPNVisitor.cpp  RPNVisitor.h  Test.txt  rpnprinter.cpp
wpl-ErichSchwarzrock/src/: CMakeLists.txt  wplc.cpp
wpl-ErichSchwarzrock/src/codegen/: CMakeLists.txt  CodeGenVisitor.cpp
wpl-ErichSchwarzrock/src/codegen/include/: CodeGenVisitor.h
wpl-ErichSchwarzrock/src/lexparse/: CMakeLists.txt  MyWPL.g4  WPL.g4
wpl-ErichSchwarzrock/src/symbol/: CMakeLists.txt  STManager.cpp  Scope.cpp  SymbolVisitor.cpp
wpl-ErichSchwarzrock/src/symbol/include/: STManager.h  Scope.h  Symbol.h  SymbolVisitor.h
(+7 files in other folders)
